[gd_scene load_steps=17 format=3 uid="uid://c4d2uvke714ft"]

[ext_resource type="Script" path="res://Player.gd" id="1_nsdbp"]
[ext_resource type="Texture2D" uid="uid://cs71ccilsf4ku" path="res://main_character-removebg-preview (2).png" id="2_80erf"]
[ext_resource type="Texture2D" uid="uid://d0ts3eanyhfh1" path="res://main_character_throw_apple-removebg-preview.png" id="3_as3fq"]
[ext_resource type="FontFile" uid="uid://da1qdy405mw0s" path="res://slkscr.ttf" id="4_g0ffc"]
[ext_resource type="Script" path="res://Health.gd" id="5_5xiin"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oh4ie"]
atlas = ExtResource("2_80erf")
region = Rect2(0, 0, 137, 227)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngwxu"]
atlas = ExtResource("2_80erf")
region = Rect2(137, 0, 137, 227)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfs1t"]
atlas = ExtResource("2_80erf")
region = Rect2(274, 0, 137, 227)

[sub_resource type="AtlasTexture" id="AtlasTexture_og1jm"]
atlas = ExtResource("3_as3fq")
region = Rect2(0, 0, 119, 209)

[sub_resource type="AtlasTexture" id="AtlasTexture_epoku"]
atlas = ExtResource("3_as3fq")
region = Rect2(119, 0, 119, 209)

[sub_resource type="AtlasTexture" id="AtlasTexture_tvm1k"]
atlas = ExtResource("3_as3fq")
region = Rect2(238, 0, 119, 209)

[sub_resource type="AtlasTexture" id="AtlasTexture_8f0de"]
atlas = ExtResource("3_as3fq")
region = Rect2(354, 0, 177, 209)

[sub_resource type="SpriteFrames" id="SpriteFrames_ja147"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oh4ie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngwxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfs1t")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oh4ie")
}],
"loop": true,
"name": &"stand",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_og1jm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epoku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvm1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8f0de")
}],
"loop": false,
"name": &"throw_apple",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_txevf"]
size = Vector2(112, 166)

[sub_resource type="CircleShape2D" id="CircleShape2D_3mq04"]
radius = 184.196

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mndlj"]
bg_color = Color(0.227451, 0.745098, 0.435294, 1)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
position = Vector2(-300, -87)
script = ExtResource("1_nsdbp")

[node name="MainCharacterSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-6, -5)
sprite_frames = SubResource("SpriteFrames_ja147")
animation = &"run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 20)
shape = SubResource("RectangleShape2D_txevf")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-4, 27)
zoom = Vector2(0.8, 0.8)

[node name="Interaction Components" type="Node2D" parent="."]
visible = false
z_index = 1
position = Vector2(-21, 16)

[node name="InteractionArea" type="Area2D" parent="Interaction Components"]
visible = false
position = Vector2(56, 3)
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction Components/InteractionArea"]
visible = false
position = Vector2(-33, 4)
rotation = -1.57247
shape = SubResource("CircleShape2D_3mq04")

[node name="InteractLabel" type="Label" parent="Interaction Components"]
offset_left = -136.0
offset_top = -190.0
offset_right = 190.0
offset_bottom = -161.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("4_g0ffc")
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="BonceRayCast" type="Node2D" parent="."]
position = Vector2(1, 0)

[node name="RayCast2D" type="RayCast2D" parent="BonceRayCast"]
position = Vector2(1, 4)
enabled = false
target_position = Vector2(0, 122)
collision_mask = 8
collide_with_areas = true

[node name="RayCast2D2" type="RayCast2D" parent="BonceRayCast"]
position = Vector2(-32, 3)
enabled = false
target_position = Vector2(-3, 121)
collision_mask = 8
collide_with_areas = true

[node name="RayCast2D3" type="RayCast2D" parent="BonceRayCast"]
position = Vector2(32, 3)
enabled = false
target_position = Vector2(-1, 125)
collision_mask = 8
collide_with_areas = true

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -60.0
offset_top = -90.0
offset_right = 58.0
offset_bottom = -78.0
theme_override_styles/fill = SubResource("StyleBoxFlat_mndlj")
max_value = 5.0
show_percentage = false

[node name="Health" type="Label" parent="."]
offset_left = -54.0
offset_top = -104.0
offset_right = 48.0
offset_bottom = -63.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_g0ffc")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_5xiin")
